# LjLog

./: CMakeLists.txt
include/: LjLogger.h  LoggerInterface.h
src/: LjLogger.cpp  LoggerInterface.cpp
tests/: CMakeLists.txt  main.cpp
